sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: missing argument list for method echange in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `echange _` or `echange(_,_)` instead of `echange`.
  while(echange==true){
        ^